# design_patterns

streagy_pattern/device_provisioning/: README.md  pyproject.toml
streagy_pattern/device_provisioning/src/provisioning/: cli.py  main.py  streagies_and_makers.py
